matrixV2 added which has more compact functions

--- a/Matrix-Python/matrix_playground.ipynb
+++ b/Matrix-Python/matrix_playground.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this cell but don't modify it.\n",
     "\n",
-    "%load_ext autoreload\n",
+    "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "from matrix import Matrix, zeroes, identity"
+    "from matrixV2 import Matrix, zeroes, identity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -30,22 +30,17 @@
       "2  5 \n",
       "6  1 \n",
       "\n",
-      "we've also provided you with a function called zeros\n",
       "here's what happens when you call zeros(4,2)\n",
       "0.0  0.0 \n",
       "0.0  0.0 \n",
       "0.0  0.0 \n",
       "0.0  0.0 \n",
       "\n",
-      "we've also provided you with a function called identity\n",
       "here's identity(3)\n",
       "1.0  0.0  0.0 \n",
       "0.0  1.0  0.0 \n",
       "0.0  0.0  1.0 \n",
-      "\n",
-      "but not everything works yet!\n",
-      "for example, matrix addition...\n",
-      "run the cell below to see what happens when we try...\n"
+      "\n"
      ]
     }
    ],
@@ -68,22 +63,17 @@
     "print(\"m2 is\")\n",
     "print(m2)\n",
     "\n",
-    "print(\"we've also provided you with a function called zeros\")\n",
     "print(\"here's what happens when you call zeros(4,2)\")\n",
     "print(zeroes(4,2))\n",
     "\n",
-    "print(\"we've also provided you with a function called identity\")\n",
     "print(\"here's identity(3)\")\n",
     "print(identity(3))\n",
-    "\n",
-    "print(\"but not everything works yet!\")\n",
-    "print(\"for example, matrix addition...\")\n",
-    "print(\"run the cell below to see what happens when we try...\")"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
+      "Congratulations! All tests pass. Your Matrix class is working as expected.\n",
       "Congratulations! All tests pass. Your Matrix class is working as expected.\n"
      ]
     }
@@ -144,14 +152,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# open matrix.py (File > Open...) and start\n",
-    "# implementing matrix methods! \n",
-    "\n",
-    "# when your code passes all the tests you can submit by \n",
-    "# pressing the SUBMIT button in the lower right corner \n",
-    "# of this page."
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -170,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
